Fix(GC): Ensure API keys are strings

--- a/clusters/galaxy-cluster/kubernetes/apps/default/jellyseerr/app/external-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/jellyseerr/app/external-secret.yaml
@@ -7,8 +7,12 @@ spec:
   secretStoreRef:
     name: bitwarden-secretsmanager
     kind: ClusterSecretStore
+  target:
+    template:
+      data:
+        API_KEY: '{{ .api | toString }}'
   data:
-  - secretKey: API_KEY
+  - secretKey: api
     remoteRef:
       key: "da8e27ff-a447-4517-96de-b26d01412596"
   - secretKey: DB_PASS
