--- a/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/app/external-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/app/external-secret.yaml
@@ -7,8 +7,12 @@ spec:
   secretStoreRef:
     name: bitwarden-secretsmanager
     kind: ClusterSecretStore
+  target:
+    template:
+      data:
+        PROWLARR__AUTH__APIKEY: '{{ .api | toString }}'
   data:
-  - secretKey: PROWLARR__AUTH__APIKEY
+  - secretKey: api
     remoteRef:
       key: "31c25d45-71a9-4e59-8470-b26d00edbd73"
   - secretKey: PROWLARR__POSTGRES__PASSWORD
