--- a/clusters/galaxy-cluster/kubernetes/apps/default/radarr/app/external-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/radarr/app/external-secret.yaml
@@ -7,8 +7,12 @@ spec:
   secretStoreRef:
     name: bitwarden-secretsmanager
     kind: ClusterSecretStore
+  target:
+    template:
+      data:
+        RADARR__AUTH__APIKEY: '{{ .api | toString }}'
   data:
-  - secretKey: RADARR__AUTH__APIKEY
+  - secretKey: api
     remoteRef:
       key: "b68641f5-70e2-432d-b693-b26d010af886"
   - secretKey: RADARR__POSTGRES__PASSWORD
