--- a/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/app/external-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/app/external-secret.yaml
@@ -7,8 +7,12 @@ spec:
   secretStoreRef:
     name: bitwarden-secretsmanager
     kind: ClusterSecretStore
+  target:
+    template:
+      data:
+        SONARR__AUTH__APIKEY: '{{ .api | toString }}'
   data:
-  - secretKey: SONARR__AUTH__APIKEY
+  - secretKey: api
     remoteRef:
       key: "1f2af75e-55c4-48c6-8b0e-b26d011137da"
   - secretKey: SONARR__POSTGRES__PASSWORD
