Fix(GC): Fix remaining external secrets and update ha helm values

--- a/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/app/external-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/app/external-secret.yaml
@@ -11,10 +11,11 @@ spec:
     template:
       data:
         PROWLARR__AUTH__APIKEY: '{{ .api | toString }}'
+        ROWLARR__POSTGRES__PASSWORD: '{{ .password | toString }}'
   data:
   - secretKey: api
     remoteRef:
       key: "31c25d45-71a9-4e59-8470-b26d00edbd73"
-  - secretKey: PROWLARR__POSTGRES__PASSWORD
+  - secretKey: password
     remoteRef:
       key: "2414638d-a830-48e3-bcd1-b34500ed78c4"
