--- a/clusters/galaxy-cluster/kubernetes/apps/default/radarr/app/external-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/radarr/app/external-secret.yaml
@@ -11,10 +11,11 @@ spec:
     template:
       data:
         RADARR__AUTH__APIKEY: '{{ .api | toString }}'
+        RADARR__POSTGRES__PASSWORD: '{{ .password | toString }}'
   data:
   - secretKey: api
     remoteRef:
       key: "b68641f5-70e2-432d-b693-b26d010af886"
-  - secretKey: RADARR__POSTGRES__PASSWORD
+  - secretKey: password
     remoteRef:
       key: "2414638d-a830-48e3-bcd1-b34500ed78c4"
