--- a/clusters/galaxy-cluster/kubernetes/apps/default/jellyseerr/app/external-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/jellyseerr/app/external-secret.yaml
@@ -11,10 +11,11 @@ spec:
     template:
       data:
         API_KEY: '{{ .api | toString }}'
+        DB_PASS: '{{ .password | toString }}'
   data:
   - secretKey: api
     remoteRef:
       key: "da8e27ff-a447-4517-96de-b26d01412596"
-  - secretKey: DB_PASS
+  - secretKey: password
     remoteRef:
       key: "2414638d-a830-48e3-bcd1-b34500ed78c4"
