--- a/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/app/external-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/app/external-secret.yaml
@@ -11,10 +11,11 @@ spec:
     template:
       data:
         SONARR__AUTH__APIKEY: '{{ .api | toString }}'
+        SONARR__POSTGRES__PASSWORD: '{{ .password | toString }}'
   data:
   - secretKey: api
     remoteRef:
       key: "1f2af75e-55c4-48c6-8b0e-b26d011137da"
-  - secretKey: SONARR__POSTGRES__PASSWORD
+  - secretKey: password
     remoteRef:
       key: "2414638d-a830-48e3-bcd1-b34500ed78c4"
