--- a/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/ks.yaml
@@ -20,7 +20,7 @@ spec:
       namespace: database
     - name: openebs
       namespace: openebs-system
-  wait: true
+  wait: false
   interval: 30m
   retryInterval: 1m
   timeout: 5m
