Fix(GC): Properly mount the configuration file

--- a/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -75,7 +75,7 @@ spec:
         advancedMounts:
           home-assistant:
             setup-config:
-              - path: /config-templates
+              - path: /config-templates/configuration.yaml
 
       config-claim:
         existingClaim: hass-config
