--- a/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/external-secret.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/external-secret.yaml
@@ -15,7 +15,7 @@ spec:
 
       # Use inline templates to construct your desired config file that contains your secret
       data:
-        DB_URL: '"{{ printf "postgresql://generalApps:%s@local-database-rw.database.svc.cluster.local/homeassistant" .password }}"'
+        DB_URL: '{{ printf "postgresql://generalApps:%s@local-database-rw.database.svc.cluster.local/homeassistant" .password }}'
 
   data:
   - secretKey: password
