Fix(GC): Add image tag

--- a/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -42,6 +42,7 @@ spec:
             enabled: true
             image:
               repository: bash
+              tag: "latest"
             command: ["bash", "-c", "cd /config && wget -O - https://get.hacs.xyz | bash -"]
 
         containers:
