Feat(GC): Enable HACS

--- a/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -39,7 +39,7 @@ spec:
               - /bin/sh /mnt/init/init.sh
 
           init-hacs:
-            enabled: false
+            enabled: true
             image:
               repository: bash
               tag: "latest"
