--- a/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/blocky-config.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/blocky/app/blocky-config.yaml
@@ -23,6 +23,7 @@ customDNS:
     lp.de.plutode.com: 192.168.15.40
     temp.ha.de.plutode.com: 10.21.0.40
     ha.de.plutode.com: 10.11.0.52
+    mqtt.de.plutode.com: 10.11.0.111
     jellyfin.de.plutode.com: 10.21.0.31
     nas.de.plutode.com: 10.21.0.31
     request.de.plutode.com: 10.21.0.40
