--- a/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/ks.yaml
@@ -11,6 +11,33 @@ spec:
       app.kubernetes.io/name: *app
   path: ./clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app
   prune: true
+  dependsOn:
+    - name: mosquitto-secrets
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+    namespace: flux-system
+  wait: false
+  interval: 30m
+  retryInterval: 1m
+  timeout: 5m
+  postBuild:
+    substituteFrom:
+      - name: mqtt-secrets
+        kind: Secret
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: &app mosquitto-secrets
+  namespace: &namespace network
+spec:
+  targetNamespace: *namespace
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  path: ./clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/secrets
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
@@ -19,3 +46,4 @@ spec:
   interval: 30m
   retryInterval: 1m
   timeout: 5m
+    
