--- a/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
@@ -65,7 +65,7 @@ spec:
                 cpu: 10m
             securityContext:
               allowPrivilegeEscalation: false
-              readOnlyRootFilesystem: true
+              readOnlyRootFilesystem: false
               capabilities:
                 drop:
                   - ALL
