--- a/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
@@ -40,9 +40,14 @@ spec:
         # Hash the password file
         initContainers:
           init-pass:
-            enabled: true
+
             securityContext:
+              runAsUser: 2000
+              runAsGroup: 2000
+              runAsNonRoot: true
               readOnlyRootFilesystem: false
+              fsGroup: 2000
+            enabled: true    
             image:
               repository: public.ecr.aws/docker/library/eclipse-mosquitto
               tag: 2.0.22
