--- a/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
@@ -31,11 +31,19 @@ spec:
     controllers:
       mosquitto:
         pod:
+          annotations:
+            k8s.v1.cni.cncf.io/networks: |
+              [{
+                "name":"multus-local",
+                "namespace": "network",
+                "ips": ["10.11.0.35/24"]
+              }]
           securityContext:
             runAsUser: 2000
             runAsGroup: 2000
             runAsNonRoot: true
             fsGroup: 2000
+          
 
         # Hash the password file
         initContainers:
@@ -99,20 +107,6 @@ spec:
           
               
     service:
-      mosquitto-lb:
-        controller: mosquitto
-        type: LoadBalancer
-        labels:
-          network: local
-        annotations:
-          external-dns.alpha.kubernetes.io/hostname: "mqtt.de.plutode.com"
-          lbipam.cilium.io/ips: "10.11.0.111"
-        ports:
-          mqtt:
-            port: 1883
-          mqtt-ws:
-            port: 8081
-
       mosquitto-cluster:
         controller: mosquitto
         type: ClusterIP
