--- a/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/app/helmrelease.yaml
@@ -100,7 +100,7 @@ spec:
               - sonarr.${SECRET_DOMAIN}
     persistence:
       config:
-        type: emptyDir
+        existingClaim: "sonarr"
       media:
         type: nfs
         server: 192.168.31.21
