--- a/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/app/helmrelease.yaml
@@ -22,6 +22,8 @@ spec:
   values:
     controllers:
       prowlarr:
+        annotations:
+          reloader.stakater.com/auto: "true"
         containers:
           app:
             image:
@@ -98,6 +100,6 @@ spec:
               - prowlarr.${SECRET_DOMAIN}
     persistence:
       config:
-        type: emptyDir
+        existingClaim: "prowlarr"
       tmp:
         type: emptyDir
