--- a/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
@@ -32,12 +32,7 @@ spec:
       mosquitto:
         pod:
           annotations:
-            k8s.v1.cni.cncf.io/networks: |
-              [{
-                "name":"multus-local",
-                "namespace": "network",
-                "ips": ["10.11.0.35/16"]
-              }]
+            k8s.v1.cni.cncf.io/networks: network/multus-local
           securityContext:
             runAsUser: 2000
             runAsGroup: 2000
