--- a/clusters/galaxy-cluster/kubernetes/apps/default/radarr/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/radarr/app/helmrelease.yaml
@@ -36,8 +36,8 @@ spec:
               RADARR__AUTH__REQUIRED: DisabledForLocalAddresses
               RADARR__POSTGRES__HOST: local-database-rw.database.svc.cluster.local
               RADARR__POSTGRES__PORT: 5432
-              RADARR__POSTGRES__MAINDB: radarr-main
-              RADARR__POSTGRES__LOGDB: radarr-log
+              RADARR__POSTGRES__MAINDB: radarr-main-a
+              RADARR__POSTGRES__LOGDB: radarr-log-a
               RADARR__POSTGRES__USER: generalApps
               RADARR__LOG__ANALYTICSENABLED: false
               RADARR__LOG__LEVEL: info
