--- a/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/database/database-log.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/database/database-log.yaml
@@ -4,7 +4,7 @@ kind: Database
 metadata:
   name: sonarr-db-log
 spec:
-  name: sonarr-log
+  name: sonarr-log-a
   owner: generalApps
   cluster:
     name: local-database
