--- a/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/database/database-main.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/database/database-main.yaml
@@ -4,7 +4,7 @@ kind: Database
 metadata:
   name: sonarr-db-main
 spec:
-  name: sonarr-main
+  name: sonarr-main-a
   owner: generalApps
   cluster:
     name: local-database
