Fix(GC): Update database names

--- a/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/database/database-log.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/database/database-log.yaml
@@ -2,7 +2,7 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Database
 metadata:
-  name: prowlarr-db-log
+  name: prowlarr-db-log-a
 spec:
   name: prowlarr-log-a
   owner: generalApps
