--- a/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/database/database-main.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/database/database-main.yaml
@@ -2,7 +2,7 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Database
 metadata:
-  name: prowlarr-db-main
+  name: prowlarr-db-main-a
 spec:
   name: prowlarr-main-a
   owner: generalApps
