--- a/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/database/database-log.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/database/database-log.yaml
@@ -2,7 +2,7 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Database
 metadata:
-  name: sonarr-db-log
+  name: sonarr-db-log-a
 spec:
   name: sonarr-log-a
   owner: generalApps
