Chore(GC): Revert changes to arr stack

--- a/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/database/database-log.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/prowlarr/database/database-log.yaml
@@ -2,9 +2,9 @@
 apiVersion: postgresql.cnpg.io/v1
 kind: Database
 metadata:
-  name: prowlarr-db-log-a
+  name: prowlarr-db-log
 spec:
-  name: prowlarr-log-a
+  name: prowlarr-log
   owner: generalApps
   cluster:
     name: local-database
