--- a/clusters/galaxy-cluster/kubernetes/apps/default/radarr/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/radarr/app/helmrelease.yaml
@@ -27,8 +27,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/11notes/radarr
-              tag: 5.26.2@sha256:e1f22c7cd0a18e725f686576891c30dba195911f2cd4e1eff77567de0563f597 
+              repository: ghcr.io/home-operations/radarr
+              tag: 5.27.5@sha256:af67ce80302e21f7228e2da671943c48b27a25faf27e19c4fcb7ad33c1c0e3c0 
             env:
               RADARR__APP__INSTANCENAME: Radarr
               RADARR__APP__THEME: dark
@@ -36,11 +36,12 @@ spec:
               RADARR__AUTH__REQUIRED: DisabledForLocalAddresses
               RADARR__POSTGRES__HOST: local-database-rw.database.svc.cluster.local
               RADARR__POSTGRES__PORT: 5432
-              RADARR__POSTGRES__MAINDB: radarr-main-a
-              RADARR__POSTGRES__LOGDB: radarr-log-a
+              RADARR__POSTGRES__MAINDB: radarr-main
+              RADARR__POSTGRES__LOGDB: radarr-log
               RADARR__POSTGRES__USER: generalApps
               RADARR__LOG__ANALYTICSENABLED: false
               RADARR__LOG__LEVEL: info
+              RADARR__SERVER__PORT: &port 80
               TZ: ${SECRET_TZ}
             envFrom:
               - secretRef:
@@ -52,7 +53,7 @@ spec:
                 spec:
                   httpGet:
                     path: /ping
-                    port: 7878
+                    port: *port
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
@@ -80,7 +81,7 @@ spec:
         controller: radarr
         ports:
           http:
-            port: 7878
+            port: *port
     ingress:
       app:
         annotations:
@@ -99,11 +100,7 @@ spec:
               - radarr.${SECRET_DOMAIN}
     persistence:
       config:
-        existingClaim: "radarr"
-      radarr:
         type: emptyDir
-        globalMounts:
-          - path: /radarr/etc
       media:
         type: nfs
         server: 192.168.31.21
