--- a/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/sonarr/app/helmrelease.yaml
@@ -36,8 +36,8 @@ spec:
               SONARR__AUTH__REQUIRED: DisabledForLocalAddresses
               SONARR__POSTGRES__HOST: local-database-rw.database.svc.cluster.local
               SONARR__POSTGRES__PORT: 5432
-              SONARR__POSTGRES__MAINDB: sonarr-main-a
-              SONARR__POSTGRES__LOGDB: sonarr-log-a
+              SONARR__POSTGRES__MAINDB: sonarr-main
+              SONARR__POSTGRES__LOGDB: sonarr-log
               SONARR__POSTGRES__USER: generalApps
               SONARR__LOG__ANALYTICSENABLED: false
               SONARR__LOG__LEVEL: info
@@ -100,7 +100,7 @@ spec:
               - sonarr.${SECRET_DOMAIN}
     persistence:
       config:
-        existingClaim: "sonarr"
+        type: emptyDir
       media:
         type: nfs
         server: 192.168.31.21
