--- a/clusters/galaxy-cluster/kubernetes/apps/kube-system/cilium/config/cilium-l2-local.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/kube-system/cilium/config/cilium-l2-local.yaml
@@ -11,7 +11,7 @@ spec:
   loadBalancerIPs: true
   # NOTE: interfaces might need to be set if you have more than one active NIC on your hosts
   interfaces:
-    - ^br1$
+    - ^bond0.10$
   nodeSelector:
     matchLabels:
       kubernetes.io/os: linux
