--- a/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local.yaml
@@ -8,8 +8,9 @@ spec:
     {
       "cniVersion": "0.3.1",
       "name": "multus-local",
-      "type": "bridge",
-      "bridge": "br1",
+      "type": "macvlan",
+      "master": "bond0.10",
+      "mode": "bridge",
       "ipam": {
         "type": "whereabouts",
         "range": "10.11.0.0/16",
