--- a/clusters/galaxy-cluster/talos/talconfig.yaml
+++ b/clusters/galaxy-cluster/talos/talconfig.yaml
@@ -40,6 +40,13 @@ nodes:
             - siderolabs/nvme-cli
     networkInterfaces:
       - interface: bond0
+        addresses:
+          - 192.168.31.32/24
+        routes:
+          - network: 0.0.0.0/0
+            gateway: "192.168.31.1"
+        vip:
+          ip: *talosControlplaneVip
         bond:
           mode: 802.3ad
           lacpRate: fast
@@ -55,41 +62,6 @@ nodes:
           - vlanId: 10
           - vlanId: 15
           - vlanId: 20
-      - interface: br0
-        dhcp: false
-        addresses:
-          - 192.168.31.32/24
-        routes:
-          - network: 0.0.0.0/0
-            gateway: "192.168.31.1"
-        vip:
-          ip: *talosControlplaneVip
-        bridge:
-          stp:
-            enabled: true
-          interfaces:
-            - bond0
-      - interface: br1
-        dhcp: false
-        bridge:
-          stp:
-            enabled: true
-          interfaces:
-            - bond0.10
-      - interface: br2
-        dhcp: false
-        bridge:
-          stp:
-            enabled: true
-          interfaces:
-            - bond0.15
-      - interface: br3
-        dhcp: false
-        bridge:
-          stp:
-            enabled: true
-          interfaces:
-            - bond0.20
 
   - hostname: milkyway
     controlPlane: true
@@ -109,6 +81,13 @@ nodes:
             - siderolabs/nvme-cli
     networkInterfaces:
       - interface: bond0
+        addresses:
+          - 192.168.31.33/24
+        routes:
+          - network: 0.0.0.0/0
+            gateway: "192.168.31.1"
+        vip:
+          ip: *talosControlplaneVip
         bond:
           mode: 802.3ad
           lacpRate: fast
@@ -124,41 +103,6 @@ nodes:
           - vlanId: 10
           - vlanId: 15
           - vlanId: 20
-      - interface: br0
-        dhcp: false
-        addresses:
-          - 192.168.31.33/24
-        routes:
-          - network: 0.0.0.0/0
-            gateway: "192.168.31.1"
-        vip:
-          ip: *talosControlplaneVip
-        bridge:
-          stp:
-            enabled: true
-          interfaces:
-            - bond0
-      - interface: br1
-        dhcp: false
-        bridge:
-          stp:
-            enabled: true
-          interfaces:
-            - bond0.10
-      - interface: br2
-        dhcp: false
-        bridge:
-          stp:
-            enabled: true
-          interfaces:
-            - bond0.15
-      - interface: br3
-        dhcp: false
-        bridge:
-          stp:
-            enabled: true
-          interfaces:
-            - bond0.20
 
   - hostname: triangulum
     controlPlane: true
@@ -166,10 +110,7 @@ nodes:
     installDisk: /dev/nvme0n1
     talosImageURL: factory.talos.dev/metal-installer/376567988ad370138ad8b2698212367b8edcb69b5fd68c80be1f2ec7d603b4ba
     networkInterfaces:
-      - interface: enp5s0
-        dhcp: false
-      - interface: br0
-        dhcp: false
+      - interface: bond0
         addresses:
           - 192.168.31.34/24
         routes:
@@ -177,32 +118,20 @@ nodes:
             gateway: "192.168.31.1"
         vip:
           ip: *talosControlplaneVip
-        bridge:
-          stp:
-            enabled: true
+        bond:
+          mode: 802.3ad
+          lacpRate: fast
+          xmitHashPolicy: layer3+4
+          miimon: 100
+          updelay: 200
+          downdelay: 200
           interfaces:
-            - enp5s0
-      - interface: br1
+            - enp7s0f0
         dhcp: false
-        bridge:
-          stp:
-            enabled: true
-          interfaces:
-            - enp8s0
-      - interface: br2
-        dhcp: false
-        bridge:
-          stp:
-            enabled: true
-          interfaces:
-            - enp7s0
-      - interface: br3
-        dhcp: false
-        bridge:
-          stp:
-            enabled: true
-          interfaces:
-            - enp6s0
+        vlans:
+          - vlanId: 10
+          - vlanId: 15
+          - vlanId: 20      
 
 # Global patches
 patches:
