--- a/clusters/galaxy-cluster/talos/talconfig.yaml
+++ b/clusters/galaxy-cluster/talos/talconfig.yaml
@@ -110,6 +110,8 @@ nodes:
     installDisk: /dev/nvme0n1
     talosImageURL: factory.talos.dev/metal-installer/376567988ad370138ad8b2698212367b8edcb69b5fd68c80be1f2ec7d603b4ba
     networkInterfaces:
+      - interface: enp5s0
+        dhcp: false
       - interface: bond0
         addresses:
           - 192.168.31.34/24
