--- a/clusters/galaxy-cluster/kubernetes/apps/network/kustomization.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/kustomization.yaml
@@ -2,6 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./namespace.yaml
   - ./blocky/ks.yaml
   - ./multus/ks.yaml
   - ./whereabouts/ks.yaml
