--- a/clusters/galaxy-cluster/kubernetes/apps/traefik/kustomization.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/traefik/kustomization.yaml
@@ -2,6 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./namespace.yaml
   - ./traefik-crds/ks.yaml
   - ./traefik-external/ks.yaml
   - ./traefik-internal/ks.yaml
