--- a/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local.yaml
@@ -8,17 +8,24 @@ spec:
     {
       "cniVersion": "0.3.1",
       "name": "multus-local",
-      "type": "macvlan",
-      "master": "bond0.10",
-      "mode": "bridge",
-      "ipam": {
-        "type": "whereabouts",
-        "range": "10.11.0.0/16",
-        "range_start": "10.11.0.30",
-        "range_end": "10.11.0.40",
-        "routes": [
-          { "dst": "10.11.0.0/16" }
-        ],
-        "gateway": "10.11.0.1"
-      }
+      "plugins": [
+        {
+          "type": "macvlan",
+          "master": "bond0.10",
+          "mode": "bridge",
+          "ipam": {
+            "type": "whereabouts",
+            "range": "10.11.0.0/16",
+            "range_start": "10.11.0.30",
+            "range_end": "10.11.0.40",
+            "routes": [
+              { "dst": "10.11.0.0/16" }
+            ],
+            "gateway": "10.11.0.1"
+          }
+        },
+        {
+          "type": "sbr"
+        }
+      ]
     }
