Chore(GC): Migrate mqtt broker to loadbalancer

--- a/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/ks.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/ks.yaml
@@ -25,6 +25,8 @@ spec:
     substituteFrom:
       - name: mqtt-secrets
         kind: Secret
+      - name: cluster-secrets
+        kind: Secret
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
