--- a/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
@@ -31,8 +31,6 @@ spec:
     controllers:
       mosquitto:
         pod:
-          annotations:
-            k8s.v1.cni.cncf.io/networks: network/multus-local
           securityContext:
             runAsUser: 2000
             runAsGroup: 2000
@@ -102,6 +100,17 @@ spec:
           
               
     service:
+      lb:
+        controller: mosquitto
+        type: LoadBalancer
+        annotations:
+          external-dns.alpha.kubernetes.io/hostname: "mqtt.${SECRET_DOMAIN}"
+          lbipam.cilium.io/ips: 10.11.0.111
+        ports:
+          mqtt:
+            port: 1883
+          mqtt-ws:
+            port: 8081
       mosquitto-cluster:
         controller: mosquitto
         type: ClusterIP
