--- a/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
@@ -103,6 +103,8 @@ spec:
       lb:
         controller: mosquitto
         type: LoadBalancer
+        labels:
+          network: local
         annotations:
           external-dns.alpha.kubernetes.io/hostname: "mqtt.${SECRET_DOMAIN}"
           lbipam.cilium.io/ips: 10.11.0.111
