--- a/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
       mosquitto:
         pod:
           annotations:
-            k8s.v1.cni.cncf.io/networks: network/multus-local
+            k8s.v1.cni.cncf.io/networks: network/multus-local-2
           securityContext:
             runAsUser: 2000
             runAsGroup: 2000
