--- a/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/kustomization.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/kustomization.yaml
@@ -3,5 +3,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./local.yaml
+  - ./local-1.yaml
+  - ./local-2.yaml
   - ./lan.yaml
