--- a/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local-2.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local-2.yaml
@@ -10,7 +10,7 @@ spec:
       "name": "multus-local",
       "type": "macvlan",
       "master": "bond0.10",
-      "mode": "bridge",
+      "mode": "vepa",
       "ipam": {
         "type": "static",
         "addresses": [
