--- a/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local-2.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local-2.yaml
@@ -7,10 +7,10 @@ spec:
   config: |-
     {
       "cniVersion": "0.3.1",
-      "name": "multus-local",
+      "name": "multus-local-2",
       "type": "macvlan",
       "master": "bond0.10",
-      "mode": "vepa",
+      "mode": "bridge",
       "ipam": {
         "type": "static",
         "addresses": [
