Fix(GC): Try vrf instead of sbr

--- a/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local-1.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local-1.yaml
@@ -27,7 +27,8 @@ spec:
           }
         },
         {
-          "type": "sbr"
+            "type": "vrf",
+            "vrfname": "blue"
         }
       ]
     }
