Fix(GC): Add destination route manually

--- a/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local-1.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local-1.yaml
@@ -27,8 +27,7 @@ spec:
           }
         },
         {
-            "type": "vrf",
-            "vrfname": "blue"
+            "type": "sbr"
         }
       ]
     }
