--- a/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -38,11 +38,23 @@ spec:
               - /bin/sh /mnt/init/init.sh
 
           init-hacs:
-            enabled: true
+            enabled: false
             image:
               repository: bash
               tag: "latest"
             command: ["bash", "-c", "cd /config && wget -O - https://get.hacs.xyz | bash -"]
+          
+          setup-route:
+            enabled: true
+            image: 
+              repository: alpine
+              tag: "latest"
+            securityContext:
+              capabilities:
+                add:
+                  - NET_ADMIN
+            command: ["/bin/sh", "-c", "ip route add 10.11.0.0/16 dev net1 || true"]
+
 
         containers:
           app:
