--- a/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local-1.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local-1.yaml
@@ -22,9 +22,12 @@ spec:
               }
             ],
             "routes": [
-              { "dst": "0.0.0.0/0" }
+              { "dst": "10.11.0.0/16" }
             ]
           }
+        },
+        {
+          "type": "sbr"
         }
       ]
     }
