--- a/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local-2.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/local-2.yaml
@@ -25,6 +25,9 @@ spec:
               { "dst": "10.11.0.0/16" }
             ]
           }
+        },
+        {
+          "type": "sbr"
         }
       ]
     }
