--- a/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
@@ -10,6 +10,7 @@ spec:
     name: app-template
     namespace: flux-system
   interval: 30m
+  timeout: 1m
   values:
     configMaps:
       config:
@@ -73,6 +74,7 @@ spec:
               requests:
                 cpu: 10m
             securityContext:
+              readOnlyRootFilesystem: false
               capabilities:
                 drop:
                   - ALL
