--- a/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/mosquitto/app/helmrelease.yaml
@@ -35,7 +35,10 @@ spec:
           annotations:
             k8s.v1.cni.cncf.io/networks: network/multus-local-2
           securityContext:
-            runAsUser: 0
+            runAsUser: 2000
+            runAsGroup: 2000
+            runAsNonRoot: true
+            fsGroup: 2000
 
         # Hash the password file
         initContainers:
@@ -55,9 +58,11 @@ spec:
               - |
                 ip route add 10.11.0.0/16 dev net1 || true
             securityContext:
-              privileged: true
+              runAsUser: 0
+              runAsNonRoot: false
               capabilities:
-                add: ["NET_ADMIN"]
+                add:
+                  - NET_ADMIN
         containers:
           app:
             image:
@@ -74,7 +79,8 @@ spec:
               requests:
                 cpu: 10m
             securityContext:
-              readOnlyRootFilesystem: false
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
               capabilities:
                 drop:
                   - ALL
