--- a/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/lan-1.yaml
+++ b/clusters/galaxy-cluster/kubernetes/apps/network/multus/networks/lan-1.yaml
@@ -2,24 +2,26 @@
 apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition
 metadata:
-  name: multus-lan
+  name: multus-lan-1
 spec:
   # For routes all are routed except pod, svc nets
   config: |-
     {
       "cniVersion": "0.3.1",
-      "name": "multus-lan",
+      "name": "multus-lan-1",
       "type": "macvlan",
       "master": "bond0",
       "mode": "bridge",
       "ipam": {
-        "type": "whereabouts",
-        "range": "192.168.31.0/24",
-        "range_start": "192.168.31.14",
-        "range_end": "192.168.31.19",
+        "type": "static",
+        "addresses": [
+          {
+            "address": "192.168.31.30/24",
+            "gateway": "192.168.31.1"
+          }
+        ],
         "routes": [
           { "dst": "0.0.0.0/0" }
-        ],
-        "gateway": "192.168.31.1"
+        ]
       }
     }
